src/objects/Conclusion__c.object
<CustomObject>
    <fields>
        <fullName>D__c</fullName>
        <label>Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MD</label>
        <referenceTo>MD__c</referenceTo>
        <relationshipLabel>Conclusions</relationshipLabel>
        <relationshipName>Conclusions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Conclusions</relationshipLabel>
        <relationshipName>Conclusions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Treatment__c</fullName>
        <label>Treatment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Conclusion</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Conclusions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conclusions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>